QPID-2507: drop the userLock before calling exchange->route()

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@934561 13f79535-47bb-0310-9956-ffa450edef68